2021-09-06  Dmitry V. Levin  <ldv@altlinux.org>

	* eblopenbackend.c (openbackend): Remove cast of calloc return value.

2021-04-19  Martin Liska  <mliska@suse.cz>

	* eblobjnotetypename.c (ebl_object_note_type_name): Use startswith.
	* eblopenbackend.c (default_debugscn_p): Likewise.

2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* libeblP.h (_): Remove.

2020-12-15  Dmitry V. Levin  <ldv@altlinux.org>

	* eblbackendname.c (ebl_backend_name): Replace gettext(...) with _(...).
	* eblcorenotetypename.c (ebl_core_note_type_name): Likewise.
	* ebldynamictagname.c (ebl_dynamic_tag_name): Likewise.
	* eblobjnote.c (ebl_object_note): Likewise.
	* eblobjnotetypename.c (ebl_object_note_type_name): Likewise.
	* eblosabiname.c (ebl_osabi_name): Likewise.
	* eblsectionname.c (ebl_section_name): Likewise.
	* eblsectiontypename.c (ebl_section_type_name): Likewise.
	* eblsegmenttypename.c (ebl_segment_type_name): Likewise.
	* eblsymbolbindingname.c (ebl_symbol_binding_name): Likewise.
	* eblsymboltypename.c (ebl_symbol_type_name): Likewise.

2020-10-19  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (tilegx_init): Removed.
	(machines): Set init to NULL for tilegx.

2020-10-19  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (libebl_a_SOURCES): Remove ebl_syscall_abi.c.
	* ebl-hooks.h (syscall_abi): Remove.
	* ebl_syscall_abi.c: Delete.
	* eblopenbackend.c (default_syscall_abi): Remove.
	(fill_defaults): Remove syscall_abi assignment.
	* libebl.h (ebl_syscall_abi): Remove.

2020-09-03  Mark Wielaard  <mark@klomp.org>

	* eblobjnote.c (ebl_object_note): For EM_AARCH64 handle BTI and PAC
	in GNU_PROPERTY_AARCH64_FEATURE_1_AND.

2020-07-19  Mark Wielaard  <mark@klomp.org>

	* libebl.h: Only typedef Ebl if _LIBASM_H is undefined.

2020-06-10  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (i386_init, sh_init, x86_64_init, ia64_init,
	alpha_init, arm_init, aarch64_init, sparc_init, ppc_init,
	ppc64_init, s390_init, tilegx_init, m68k_init, bpf_init,